bugfix overflow

--- a/assets/CSS/style.less
+++ b/assets/CSS/style.less
@@ -88,13 +88,11 @@ h1, h2, h3, h4, h5 {
 @media (max-width: 768px) {
 	body {
         width: 768px;
-		overflow: hidden;
     }
 }
 
 @media (max-width: 375px) {
 	body {
         width: 375px;
-		overflow: hidden;
     }
 }
